k8s/external-service.yml
  kind: "Service"
  apiVersion: "v1"
  metadata:
    name: keycloak-ext
  spec:
    ports:
      -
        name: "keycloak-ext"
        protocol: "TCP"
        port: 3306
        targetPort: 3306 
        nodePort: 0
  selector: {}
