k8s/grafana-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  namespace: cloud
  labels:
    app: grafana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      containers:
      - name: grafana
        image: grafana/grafana:8.4.4
        ports:
        - containerPort: 3000
        volumeMounts:
        - name: grafana-config
          mountPath: "/etc/grafana/"
          readOnly: true
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
      volumes:
      - name: grafana-config
        configMap:
          name: grafana-config
          items:
            - key: grafana.ini
              path: grafana.ini
---
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: cloud
spec:
  selector:
    app: grafana
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: LoadBalancer
