k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
  annotations:
     ingress.kubernetes.io/ssl-redirect: "false"
spec:
#  tls:
#    - secretName: keycloak-ssl-certs
  rules:
   - host: grafana.example.com
     http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: grafana
            port:
              number: 80
